<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="${packageName}.${activityClass}" >
    
    <TextView
        android:id="@+id/textView_sc_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/status_home_sc_name"
        android:textSize="@dimen/normal_textSize" />

    <Button
        android:id="@+id/button_sc_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_sc_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/large_textSize" /> 

    <TextView
        android:id="@+id/textView_sc_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_sc_state"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
		android:text="@string/sc_text_intro"
        android:textSize="@dimen/small_textSize" />       
    
    <TextView
        android:id="@+id/textView_sc_trigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_sc_intro"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
		android:text="@string/sc_text_will_trigger"
        android:textSize="@dimen/small_textSize" />        
    
    <TextView
        android:id="@+id/textView_sc_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_sc_trigger"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/holo_blue_light"
        android:textSize="@dimen/small_textSize" /> 
        
    <TextView
        android:id="@+id/textView_sc_turned_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_sc_state"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
		android:text="@string/sc_text_turned_off"
        android:textSize="@dimen/small_textSize" /> 
        
 
                
</RelativeLayout>